# gpuser-v3-backend

./: .djlintrc  .dockerignore  .editorconfig  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  application.py  compose.yml  pyproject.toml  requirements.txt  ruff.toml  settings.py  ssh_manager.py
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/workflows/: format.yml  main.yml
config/: settings.py  urls.py
gpuser/: apps.py  ssh_gpu.py  urls.py  views.py
gpuser/scripts/: gpu_status.sh
gpuser/templates/gpuser/: index.html
scripts/: gpu_status.sh
