[tool.poetry]
authors = ["t-ohtsuka89 <102138393+t-ohtsuka89@users.noreply.github.com>"]
description = ""
name = "gpuser"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
apscheduler = "^3.10.4"
flask = "^3.0.2"
flask-caching = "^2.1.0"
flask-cors = "^4.0.0"
gunicorn = "^21.2.0"
paramiko = "^3.4.0"
python = "^3.12"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.4.10"
types-paramiko = "^3.4.0.20240311"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
